tests/compile_failures/single_arg_splitbits.rs
use splitbits::*;

fn main() {
    splitbits!(0b11011101);
    splitbits!("aaabbccc");
}
